# whisper-core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  fetch_deps  index.html  params.json  test.hs
integration_test/: run_tests  test_initiator
integration_test/initiator/: run_tests  test_initiator  test_initiator.c
integration_test/receiver/: run_tests  test_receiver.c
jnxlibc/src/jnxlibc-project-build/cmake_modules/: cmake_uninstall.cmake
jnxlibc/src/jnxlibc-project-build/jnxc_headers/: jnx_btree.h  jnx_check.h  jnx_encoder.h  jnx_file.h  jnx_guid.h  jnx_hash.h  jnx_ipc_socket.h  jnx_list.h  jnx_log.h  jnx_network.h  jnx_queue.h  jnx_quicksort.h  jnx_signal.h  jnx_socket.h  jnx_stack.h  jnx_string.h  jnx_tcp_socket.h  jnx_term.h  jnx_thread.h  jnx_types.h  jnx_udp_socket.h  jnx_vector.h
jnxlibc/src/jnxlibc-project-stamp/: jnxlibc-project-gitinfo.txt
jnxlibc/tmp/: jnxlibc-project-cfgcmd.txt  jnxlibc-project-gitclone.cmake  jnxlibc-project-gitupdate.cmake
src/app/: app.c  app.h
src/comms/: binding.c  binding.h
src/crypto/: CMakeLists.txt  cryptography.c  cryptography.h
src/data/: CMakeLists.txt  peer.c  peer.h  peer.pb-c.c  peer.pb-c.h  peer.proto  peerstore.c  peerstore.h
src/err/: CMakeLists.txt  whisper_errors.h
src/integrity/: CMakeLists.txt  encoding.c  encoding.h
src/net/: CMakeLists.txt  auth_comms.c  auth_comms.h  connection.c  connection.h  connection_controller.c  connection_controller.h  connection_request.c  connection_request.h  discovery.c  discovery.h  discovery_strategy.h  port_control  port_control.c  port_control.h  secure_comms.c  secure_comms.h
src/session/: CMakeLists.txt  auth_initiator.proto  auth_invite.proto  auth_joiner.pb-c.c  auth_joiner.pb-c.h  auth_joiner.proto  auth_receiver.proto  handshake_control.c  handshake_control.h  protobuf_construction.c  protobuf_construction.h  secure_comms_object.proto  session.c  session.h  session_controller.c  session_controller.h  session_service.c  session_service.h
src/util/: CMakeLists.txt  utils.c  utils.h
test/: run_tests  test_crypto.c  test_discovery  test_discovery.c  test_peerstore.c  test_secure_comms.c  test_serialisation.c  test_session.c  testlogger.conf
test/integration_test/connectivity/: run_tests  test_connectivity  test_connectivity.c
test/integration_test/initiator/: logger.conf  run_tests  test_initiator  test_initiator.c
test/integration_test/inviter/: run_tests  test_inviter  test_inviter.c
test/integration_test/inviter_threeway/: run_tests  test_initiator  test_initiator.c  test_inviter
test/integration_test/joiner/: run_tests  test_joiner.c
test/integration_test/receiver/: run_tests  test_receiver  test_receiver.c
test/integration_test/receiver_norecyclesession/: logger.conf  run_tests  test_receiver.c
test/unit_test/: log.conf  run_tests  test_crypto  test_crypto.c  test_discovery  test_discovery.c  test_peerstore.c  test_port_control.c  test_protobuf.c  test_secure_comms.c  test_serialisation.c  test_session.c
tools/: generate_protobuf  rebuild
unit_test/: run_tests  test_crypto.c  test_serialisation.c
